Fix minor spelling and grammar issues in headings and labels

--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
             <div id="u18" class="ax_default primary_button">
               <div id="u18_div" class=""></div>
               <div id="u18_text" class="text ">
-                <p><span>PUPLC SAFETY CENTER</span></p>
+                <p><span>PUBLIC SAFETY CENTER</span></p>
               </div>
             </div>
 
@@ -166,7 +166,7 @@
             <div id="u22" class="ax_default _标题_1">
               <div id="u22_div" class=""></div>
               <div id="u22_text" class="text ">
-                <p><span>RESOUCE</span></p>
+                <p><span>RESOURCE</span></p>
               </div>
             </div>
 
@@ -207,11 +207,11 @@
               </div>
             </div>
 
-            <!-- Unnamed (矩形) -->
+          <!-- Unnamed (矩形) -->
             <div id="u28" class="ax_default button">
               <div id="u28_div" class=""></div>
               <div id="u28_text" class="text ">
-                <p><span>&nbsp;&nbsp; CREAT POST</span></p>
+                <p><span>&nbsp;&nbsp; CREATE POST</span></p>
               </div>
             </div>
 
@@ -556,7 +556,7 @@
             <div id="u78" class="ax_default _标题_1">
               <div id="u78_div" class=""></div>
               <div id="u78_text" class="text ">
-                <p><span>RESOUCE</span></p>
+                <p><span>RESOURCE</span></p>
               </div>
             </div>
 
@@ -634,7 +634,7 @@
             <div id="u90" class="ax_default _标题_3">
               <div id="u90_div" class=""></div>
               <div id="u90_text" class="text ">
-                <p><span>Term&amp;Condition</span></p>
+                <p><span>Terms and Conditions</span></p>
               </div>
             </div>
 
@@ -1167,7 +1167,7 @@
             <div id="u174" class="ax_default box_1">
               <div id="u174_div" class=""></div>
               <div id="u174_text" class="text ">
-                <p><span>Give as much information as possible so more people can help</span></p>
+                <p><span>Please provide as much information as possible.</span></p>
               </div>
             </div>
 
