--- a/home.html
+++ b/home.html
@@ -312,7 +312,7 @@
             <div id="u44" class="ax_default label">
               <div id="u44_div" class=""></div>
               <div id="u44_text" class="text ">
-                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>ACADEMIC</span></p>
+                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>LAST SEEN</span></p>
               </div>
             </div>
 
@@ -344,7 +344,7 @@
             <div id="u48" class="ax_default label">
               <div id="u48_div" class=""></div>
               <div id="u48_text" class="text ">
-                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>HAIR</span></p>
+                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>HAIR COLOR</span></p>
               </div>
             </div>
 
@@ -360,7 +360,7 @@
             <div id="u50" class="ax_default label">
               <div id="u50_div" class=""></div>
               <div id="u50_text" class="text ">
-                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>EYES</span></p>
+                <p style="font-size:14px;"><span style="font-size:20px;">·</span><span>EYE COLOR</span></p>
               </div>
             </div>
 
@@ -712,7 +712,7 @@
             <div id="u104" class="ax_default _标题_1">
               <div id="u104_div" class=""></div>
               <div id="u104_text" class="text ">
-                <p><span>RESOUCE</span></p>
+                <p><span>RESOURCE</span></p>
               </div>
             </div>
 
@@ -1071,7 +1071,7 @@
             <div id="u162" class="ax_default _标题_3">
               <div id="u162_div" class=""></div>
               <div id="u162_text" class="text ">
-                <p><span>CWID:</span></p>
+                <p><span>Classes Shared:</span></p>
               </div>
             </div>
 
@@ -1103,7 +1103,7 @@
             <div id="u166" class="ax_default _标题_3">
               <div id="u166_div" class=""></div>
               <div id="u166_text" class="text ">
-                <p><span>Class shared:</span></p>
+                <p><span>Eye Color:</span></p>
               </div>
             </div>
 
@@ -1143,7 +1143,7 @@
             <div id="u171" class="ax_default _标题_3">
               <div id="u171_div" class=""></div>
               <div id="u171_text" class="text ">
-                <p><span>Language:</span></p>
+                <p><span>Last Wearing:</span></p>
               </div>
             </div>
 
@@ -1151,7 +1151,7 @@
             <div id="u172" class="ax_default _标题_3">
               <div id="u172_div" class=""></div>
               <div id="u172_text" class="text ">
-                <p><span>*Last seen where/when:</span></p>
+                <p><span>*Last Seen (date, time and location):</span></p>
               </div>
             </div>
 
@@ -1159,7 +1159,7 @@
             <div id="u173" class="ax_default _标题_3">
               <div id="u173_div" class=""></div>
               <div id="u173_text" class="text ">
-                <p><span>More description:</span></p>
+                <p><span>Please provide any additional information:</span></p>
               </div>
             </div>
 
@@ -1180,7 +1180,7 @@
             <div id="u176" class="ax_default _标题_3">
               <div id="u176_div" class=""></div>
               <div id="u176_text" class="text ">
-                <p><span>Commuter：</span></p>
+                <p><span>Commuter:</span></p>
               </div>
             </div>
 
@@ -1214,7 +1214,7 @@
             <div id="u182" class="ax_default _标题_1">
               <div id="u182_div" class=""></div>
               <div id="u182_text" class="text ">
-                <p><span>RESOUCE</span></p>
+                <p><span>RESOURCE</span></p>
               </div>
             </div>
 
